--- a/trunk/src/main/java/com/ted/aggredata/client/panels/AggreData.css
+++ b/trunk/src/main/java/com/ted/aggredata/client/panels/AggreData.css
@@ -19,10 +19,11 @@
         text-align: center;
         font-size: 1em;
         font-family: Arial, Verdana, Trebuchet, sans-serif;
-        background: #005e2d url(images/header.png) top left repeat-x;
+        background: #000000 url(images/background.jpg) center no-repeat;
         color: #FFF;
         padding-bottom: 0px !important;
         margin-bottom: 0px !important;
+        background-position:center top;
     }
 
     .mainBody {
@@ -30,8 +31,6 @@
         min-height: 640px;
         margin: 0px;
         padding: 0px;
-        background-color:white;
-
     }
 
 
