--- a/trunk/src/main/webapp/AggreData.css
+++ b/trunk/src/main/webapp/AggreData.css
@@ -33,6 +33,9 @@
     text-align: center;
     font-size: 10pt;
     vertical-align: middle;
+    cursor: pointer;
+    cursor: hand;
+
 }
 
 
@@ -42,6 +45,9 @@
     text-align: left;
     font-size: 10pt;
     vertical-align: middle;
+    cursor: pointer;
+    cursor: hand;
+
 }
 
 .menuTextSelected {
@@ -50,5 +56,19 @@
     text-align: left;
     font-size: 10pt;
     vertical-align: middle;
+    cursor: pointer;
+    cursor: hand;
 }
 
+
+.largeButtonTextStyle {
+    font-family: Arial, Verdana, Trebuchet, sans-serif;
+    color: #FFF;
+    font-weight: bolder;
+    text-align: center;
+    font-size: 12pt;
+    vertical-align: middle;
+    cursor: pointer;
+    cursor: hand;
+
+}
