--- a/trunk/src/main/java/com/ted/aggredata/client/panels/Global.css
+++ b/trunk/src/main/java/com/ted/aggredata/client/panels/Global.css
@@ -38,4 +38,22 @@
         vertical-align: middle;
     }
 
+    .panelTitleText {
+        font-family: Arial, Verdana, Trebuchet, sans-serif;
+        color: #FFF;
+        text-align: center;
+        font-weight: boler;
+        font-size: 12pt;
+        vertical-align: middle;
+    }
+
+    .panelInstructionText {
+        font-family: Arial, Verdana, Trebuchet, sans-serif;
+        color: #FFF;
+        text-align: center;
+        font-weight: boler;
+        font-size: 8pt;
+        vertical-align: middle;
+    }
+
 
