--- a/trunk/src/main/java/com/ted/aggredata/client/panels/Global.css
+++ b/trunk/src/main/java/com/ted/aggredata/client/panels/Global.css
@@ -101,3 +101,10 @@
         vertical-align: middle;
     }
 
+    .gatewayListLabel {
+        font-family: Arial, Verdana, Trebuchet, sans-serif;
+        color: #FFF;
+        text-align: left;
+        font-size: 9pt;
+        vertical-align: middle;
+    }
