--- a/src/main/java/com/ted/aggredata/client/panels/Global.css
+++ b/src/main/java/com/ted/aggredata/client/panels/Global.css
@@ -108,3 +108,33 @@
         font-size: 9pt;
         vertical-align: middle;
     }
+
+    .gridHeader{
+        font-family: Arial, Verdana, Trebuchet, sans-serif;
+        color: #FFF;
+        text-align: center;
+        font-size: 8pt;
+        vertical-align: middle;
+    }
+
+    .captionHeader{
+        font-family: Arial, Verdana, Trebuchet, sans-serif;
+        text-align: center;
+        font-size: 10pt;
+        vertical-align: middle;
+        color: #FFFFFF;
+
+    }
+
+
+
+
+    .mtuTypeField{
+        font-family: Arial, Verdana, Trebuchet, sans-serif;
+        text-align: left;
+        font-size: 10pt;
+        vertical-align: middle;
+        color: black;
+        height:18px;
+    }
+
