--- a/src/main/java/com/ted/aggredata/client/panels/Global.css
+++ b/src/main/java/com/ted/aggredata/client/panels/Global.css
@@ -24,7 +24,7 @@
         background: #000000 url(images/background.jpg) center top no-repeat;
     }
 
-    .captionHeader{
+    .captionHeader {
         color: #FFFFFF;
         font-family: Arial, Verdana, Trebuchet, sans-serif;
         text-align: center;
@@ -33,8 +33,6 @@
         color: #FFFFFF;
 
     }
-
-
 
     .mainBody {
         padding: 0px !important;
@@ -55,9 +53,8 @@
         text-align: center;
         font-size: 8pt;
         vertical-align: middle;
-        width:780px;
+        width: 780px;
     }
-
 
     .panelText {
         font-family: Arial, Verdana, Trebuchet, sans-serif;
@@ -65,10 +62,8 @@
         text-align: left;
         font-size: 10pt;
         vertical-align: middle;
-        width:780px;
+        width: 780px;
     }
-
-
 
     .formLabel {
         font-family: Arial, Verdana, Trebuchet, sans-serif;
@@ -96,7 +91,6 @@
         vertical-align: middle;
     }
 
-
     .formError {
         font-family: Arial, Verdana, Trebuchet, sans-serif;
         color: red;
@@ -121,7 +115,7 @@
         vertical-align: middle;
     }
 
-    .gridHeader{
+    .gridHeader {
         font-family: Arial, Verdana, Trebuchet, sans-serif;
         color: #FFF;
         text-align: center;
@@ -129,16 +123,28 @@
         vertical-align: middle;
     }
 
-
-
-
-
-    .mtuTypeField{
+    .mtuTypeField {
         font-family: Arial, Verdana, Trebuchet, sans-serif;
         text-align: left;
         font-size: 10pt;
         vertical-align: middle;
         color: black;
-        height:18px;
+        height: 18px;
+    }
+
+    .sideBarHeader {
+        font-family: Arial, Verdana, Trebuchet, sans-serif;
+        color: #FFF;
+        text-align: center;
+        font-size: 10pt;
+        vertical-align: middle;
+    }
+
+    .sideBarInstructions {
+        font-family: Arial, Verdana, Trebuchet, sans-serif;
+        color: #FFF;
+        text-align: center;
+        font-size: 8pt;
+        vertical-align: middle;
     }
 
