--- a/trunk/src/main/java/com/ted/aggredata/client/panels/Global.css
+++ b/trunk/src/main/java/com/ted/aggredata/client/panels/Global.css
@@ -148,3 +148,23 @@
         vertical-align: middle;
     }
 
+
+    .sideBarLabel {
+        font-family: Arial, Verdana, Trebuchet, sans-serif;
+        color: #FFF;
+        text-align: right;
+        font-size: 9pt;
+        width:50px;
+        vertical-align: middle;
+    }
+
+    .sideBarFormField {
+        font-family: Arial, Verdana, Trebuchet, sans-serif;
+        color: #000;
+        text-align: left;
+        font-size: 9pt;
+        width:100px;
+        vertical-align: middle;
+    }
+
+
