--- a/trunk/src/main/java/com/ted/aggredata/client/panels/login/LoginPanel.css
+++ b/trunk/src/main/java/com/ted/aggredata/client/panels/login/LoginPanel.css
@@ -65,3 +65,12 @@
     }
 
 
+
+    .notAMember {
+        font-family: Arial, Verdana, Trebuchet, sans-serif;
+        color: #d1d1d1;
+        text-align: right;
+        font-size: 10pt;
+        vertical-align: middle;
+    }
+
