--- a/trunk/src/main/resources/com/ted/aggredata/emailTemplates/activationEmail.vm
+++ b/trunk/src/main/resources/com/ted/aggredata/emailTemplates/activationEmail.vm
@@ -4,7 +4,7 @@
 <div>
     Thank you for registering with AggreData. To activate your account, please click on the following link or cut and paste it into our browser.:
 </div>
-<h3><a href="http://${serverInfo.serverName}/aggredata/activate?key=${key}">http://${serverInfo.serverName}/aggredata/activate?key=${key}</a></h3>
+<h3><a href="http://${serverInfo.serverName}/aggredata/accountActivate?key=${key}">http://${serverInfo.serverName}/aggredata/accountActivate?key=${key}</a></h3>
 
 Thanks,  <br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="http://${serverInfo.serverName}">AggreData</a>
