--- a/src/main/java/com/ted/aggredata/client/panels/Global.css
+++ b/src/main/java/com/ted/aggredata/client/panels/Global.css
@@ -232,3 +232,84 @@
     }
 
 
+    .userSelectionPopup
+    {
+        cursor                       :    pointer;
+        cursor                       :    hand;
+        color:white;
+        font-family : Helvetica, Verdana, Arial,  sans-serif;
+        text-align:left;
+        font-size:10pt;
+        background: #3f3f3f;
+
+    }
+
+    .userSelectionPopup .item-selected
+    {
+        background: red;
+    }
+
+
+
+    .dashboardTabText {
+        font-family: Arial, Verdana, Trebuchet, sans-serif;
+        color: #FFF;
+        text-transform: uppercase;
+        text-align: center;
+        font-size: 10pt;
+        vertical-align: middle;
+        cursor: pointer;
+        cursor: hand;
+
+    }
+
+
+    .menuText {
+        font-family: Arial, Verdana, Trebuchet, sans-serif;
+        color: #7b7a7a;
+        text-align: left;
+        font-size: 10pt;
+        vertical-align: top;
+        cursor: pointer;
+        cursor: hand;
+
+    }
+
+    .menuTextSelected {
+        font-family: Arial, Verdana, Trebuchet, sans-serif;
+        color: #e70035;
+        text-align: left;
+        font-size: 10pt;
+        vertical-align: top;
+        cursor: pointer;
+        cursor: hand;
+    }
+
+
+    .largeButtonTextStyle {
+        font-family: Arial, Verdana, Trebuchet, sans-serif;
+        color: #FFF;
+        font-weight: bolder;
+        text-align: center;
+        font-size: 12pt;
+        vertical-align: middle;
+        cursor: pointer;
+        cursor: hand;
+
+    }
+
+
+    .smallButtonTextStyle {
+        font-family: Arial, Verdana, Trebuchet, sans-serif;
+        color: #FFF;
+        font-weight: bolder;
+        text-align: center;
+        font-size: 8pt;
+        vertical-align: middle;
+        cursor: pointer;
+        cursor: hand;
+
+
+    }
+
+
