Added side text (instructions) for profile tabs

--- a/src/main/java/com/ted/aggredata/client/panels/Global.css
+++ b/src/main/java/com/ted/aggredata/client/panels/Global.css
@@ -312,4 +312,12 @@
 
     }
 
+    .sideBarInstructionsLeft {
+        font-family: Arial, Verdana, Trebuchet, sans-serif;
+        color: #FFF;
+        text-align: left;
+        font-size: 8pt;
+        vertical-align: middle;
+    }
+
 
