--- a/trunk/src/main/java/com/ted/aggredata/client/panels/Global.css
+++ b/trunk/src/main/java/com/ted/aggredata/client/panels/Global.css
@@ -74,6 +74,20 @@
 
     }
 
+    .formLink {
+        font-family: Arial, Verdana, Trebuchet, sans-serif;
+        color: red;
+        text-align: left;
+        font-size: 10pt;
+        vertical-align: middle;
+        text-decoration: underline;
+        width: 100px;
+        cursor: pointer;
+        cursor: hand;
+
+    }
+
+
     .formField {
         font-family: Arial, Verdana, Trebuchet, sans-serif;
         color: #000;
